--- a/JAVA/SPRING/src/main/resources/application.properties
+++ b/JAVA/SPRING/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+server.port=42000
+## default connection pool
+
+# datasource
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testeperformance
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+# jpa
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.format_sql=true
+
+# h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+#spring.datasource.hikari.connectionTimeout=200000
+#spring.datasource.hikari.maximumPoolSize=200
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
 
