--- a/RUST/hello-rocket/Cargo.toml
+++ b/RUST/hello-rocket/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
+postgres = "0.17.5"
+diesel = { version = "1.4.1", features = ["postgres"] }
+dotenv = "0.15.0"
