--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,53 @@ obj
 target
 .vscode/launch.json
 env
+DELPHI/DelphiHorse/__history/Conexao.pas.~14~
+DELPHI/DelphiHorse/__history/Cliente.pas.~1~
+DELPHI/DelphiHorse/__history/Cliente.pas.~2~
+DELPHI/DelphiHorse/__history/Cliente.pas.~3~
+DELPHI/DelphiHorse/__history/Cliente.pas.~4~
+DELPHI/DelphiHorse/__history/Cliente.pas.~5~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~56~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~57~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~58~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~59~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~60~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~61~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~62~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~63~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~64~
+DELPHI/DelphiHorse/__history/ClienteRepository.pas.~65~
+DELPHI/DelphiHorse/__history/Conexao.pas.~15~
+DELPHI/DelphiHorse/__history/Conexao.pas.~16~
+DELPHI/DelphiHorse/__history/Conexao.pas.~17~
+DELPHI/DelphiHorse/__history/Conexao.pas.~18~
+DELPHI/DelphiHorse/__history/Conexao.pas.~19~
+DELPHI/DelphiHorse/__history/Conexao.pas.~20~
+DELPHI/DelphiHorse/__history/Conexao.pas.~21~
+DELPHI/DelphiHorse/__history/Conexao.pas.~22~
+DELPHI/DelphiHorse/__history/Conexao.pas.~23~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~16~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~17~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~18~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~19~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~20~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~21~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~22~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~23~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~24~
+DELPHI/DelphiHorse/__history/DelphiHorse.dpr.~25~
+DELPHI/DelphiHorse/__history/dtmConexao.dfm.~1~
+DELPHI/DelphiHorse/__history/dtmConexao.dfm.~2~
+DELPHI/DelphiHorse/__history/dtmConexao.dfm.~3~
+DELPHI/DelphiHorse/__history/dtmConexao.pas.~1~
+DELPHI/DelphiHorse/__history/dtmConexao.pas.~2~
+DELPHI/DelphiHorse/Win64/Release/dtmConexao.dcu
+DELPHI/DelphiHorse/Win64/Release/DelphiHorse.exe
+DELPHI/DelphiHorse/Win64/Release/Conexao.dcu
+DELPHI/DelphiHorse/Win64/Release/ClienteRepository.dcu
+DELPHI/DelphiHorse/Win64/Release/Cliente.dcu
+DELPHI/DelphiHorse/Win32/Release/dtmConexao.dcu
+DELPHI/DelphiHorse/Win32/Release/DelphiHorse.exe
+DELPHI/DelphiHorse/Win32/Release/Conexao.dcu
+DELPHI/DelphiHorse/Win32/Release/ClienteRepository.dcu
+DELPHI/DelphiHorse/Win32/Release/Cliente.dcu
